// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Organization should render with organization permitted by default, and expand data when button is clicked 1`] = `
<div
  class="Expander__ExpanderContainer-sc-fukmjx-0 ecVdwa"
>
  <button
    aria-pressed="false"
    class="Expander__ExpanderTitle-sc-fukmjx-2 hfuaOO"
  >
    <div
      aria-hidden="true"
      class="Expander__ExpanderPrefix-sc-fukmjx-1 duwlEB"
    >
      +
    </div>
    Organisaatio 1
    <div
      class="Expander__ExpanderSuffix-sc-fukmjx-3 fYPOjv"
    >
      Opintosuoritukset (KOSKI)
    </div>
  </button>
</div>
`;

exports[`Organization should render with organization permitted by default, and expand data when button is clicked 2`] = `
<div
  class="Expander__ExpanderContainer-sc-fukmjx-0 ecVdwa"
>
  <button
    aria-pressed="true"
    class="Expander__ExpanderTitle-sc-fukmjx-2 jedhpj"
  >
    <div
      aria-hidden="true"
      class="Expander__ExpanderPrefix-sc-fukmjx-1 duwlEB"
    >
      -
    </div>
    Organisaatio 1
    <div
      class="Expander__ExpanderSuffix-sc-fukmjx-3 fYPOjv"
    >
      Opintosuoritukset (KOSKI)
    </div>
  </button>
  <div
    class="Expander__ExpandedContents-sc-fukmjx-4 eCPcIa"
  >
    <div
      class="OrganizationDetails__Details-sc-4gjwy4-0 hAtZYl"
    >
      <div
        class="OrganizationDetails__Description-sc-4gjwy4-1 bNUnTP"
      >
        <b
          class="typography__Bold-sc-1yq3b4j-6 jFpkKS"
        >
          Tietojen käyttölupa:
        </b>
         Lakiin perustuva tiedonkäyttölupa.
      </div>
      <a
        class="typography__Link-sc-1yq3b4j-5 hlKauV"
        href="https://opintopolku.fi/konfo/fi/sivu/tietosuojaselosteet-ja-evasteet"
        target="_blank"
      >
        <test-file-stub
          classname="ExternalLink__PositionedLinkIcon-sc-1in9m5g-0 bylCmw"
        />
        <b
          class="typography__Bold-sc-1yq3b4j-6 jFpkKS"
        >
          Tarkempi kuvaus lähetetyistä tiedoista
        </b>
      </a>
    </div>
    <div
      class="LogEntries__Container-sc-ufvf4x-0 dVMpRx"
    >
      <div
        class="LogEntries__TopRow-sc-ufvf4x-1 iQxbkw"
      >
        <button
          aria-pressed="false"
          class="ButtonSmall__TextButton-sc-r8zxw8-0 bVQDsK"
        >
          Näytä tietojen käyttökerrat
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Organization should render with organization permitted by user, and expand data when button is clicked 1`] = `
<div
  class="Expander__ExpanderContainer-sc-fukmjx-0 ecVdwa"
>
  <button
    aria-pressed="false"
    class="Expander__ExpanderTitle-sc-fukmjx-2 hfuaOO"
  >
    <div
      aria-hidden="true"
      class="Expander__ExpanderPrefix-sc-fukmjx-1 duwlEB"
    >
      +
    </div>
    Organisaatio 2
    <div
      class="Expander__ExpanderSuffix-sc-fukmjx-3 fYPOjv"
    >
      Opintosuoritukset (KOSKI)
    </div>
  </button>
</div>
`;

exports[`Organization should render with organization permitted by user, and expand data when button is clicked 2`] = `
<div
  class="Expander__ExpanderContainer-sc-fukmjx-0 ecVdwa"
>
  <button
    aria-pressed="true"
    class="Expander__ExpanderTitle-sc-fukmjx-2 jedhpj"
  >
    <div
      aria-hidden="true"
      class="Expander__ExpanderPrefix-sc-fukmjx-1 duwlEB"
    >
      -
    </div>
    Organisaatio 2
    <div
      class="Expander__ExpanderSuffix-sc-fukmjx-3 fYPOjv"
    >
      Opintosuoritukset (KOSKI)
    </div>
  </button>
  <div
    class="Expander__ExpandedContents-sc-fukmjx-4 eCPcIa"
  >
    <div
      class="OrganizationDetails__Details-sc-4gjwy4-0 hAtZYl"
    >
      <div
        class="OrganizationDetails__Description-sc-4gjwy4-1 bNUnTP"
      >
        <b
          class="typography__Bold-sc-1yq3b4j-6 jFpkKS"
        >
          Tietojen käyttölupa:
        </b>
         Olet antanut tälle palvelutarjoajalle luvan käyttää tietojasi.
      </div>
      <a
        class="typography__Link-sc-1yq3b4j-5 hlKauV"
        href="https://opintopolku.fi/konfo/fi/sivu/tietosuojaselosteet-ja-evasteet"
        target="_blank"
      >
        <test-file-stub
          classname="ExternalLink__PositionedLinkIcon-sc-1in9m5g-0 bylCmw"
        />
        <b
          class="typography__Bold-sc-1yq3b4j-6 jFpkKS"
        >
          Tarkempi kuvaus lähetetyistä tiedoista
        </b>
      </a>
    </div>
    <div
      class="LogEntries__Container-sc-ufvf4x-0 dVMpRx"
    >
      <div
        class="LogEntries__TopRow-sc-ufvf4x-1 iQxbkw"
      >
        <button
          aria-pressed="false"
          class="ButtonSmall__TextButton-sc-r8zxw8-0 bVQDsK"
        >
          Näytä tietojen käyttökerrat
        </button>
      </div>
    </div>
  </div>
</div>
`;
